# CandidateGPT

./: .env-template  .gitignore  Dockerfile  README.md  config.yml  docker-compose-litellm.yml  docker-compose.bc.yml  docker-compose.dev.yml  docker-compose.local-only.yml  docker-compose.yml  dockercompose-archive.yml  entrypoint.sh  login.html  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bob.yml
data/: README.md  bio.md
data/issues/: climate_change.md  education.md  federal_workforce.md  foreign_policy.md  gun_violence.md  healthcare.md  housing.md  immigration.md  racial_justice.md  transportation.md  veterans.md  womens_rights.md
mastermind/: __init__.py  ai_model.py  models.py
mastermind/backend/: __init__.py
mastermind/data_manager/: __init__.py
mastermind/data_manager/load/: __init__.py
mastermind/utils/: __init__.py  auth.py  email.py  json_stuff.py  logging.py  sentry.py  token_utils.py
migrations/: env.py
migrations/versions/: 09d0285b399e_response_management.py  19b8149e8272_alter_password_hash_column_to_text.py  20edf329dd04_add_response_types_data.py  240523c19add_rename__is_active_to_is_active.py  3322d400bce8_rename_is_active_column_to__is_active.py  49541176cb75_fix_dumb_schema_mistakes_whoops.py  4ae467ff8b7c_change_server_default_to_default_for_.py  7d2946f9be70_admin_portal.py  91989d63b5c9_ensure_created_at_and_updated_at_.py  bacfbac50be7_response_and_query_fixes.py  bb21b4d9a57c_timestamp_logging_function_reverts.py  d22851a20b16_alter_user_id_columns_to_uuid.py  e7743a2322cb_fields.py  fc52216bb119_add_organizations_table_update_users_.py  fd8c753ede7a_initial_migration.py
tests/: test_backend.py  test_connections.py
web/: admin.py  app.py  auth.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: 403.html  404.html  about.html  base.html  chat.html  footer.html  header.html  index.html  potus.html  test.html
web/templates/admin/: add_user.html  dashboard.html  edit_user.html  users.html
web/templates/auth/: login.html  password_reset_request.html  profile.html  register.html  reset_password.html  setup_admin.html
(+5 files in other folders)
